--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:text="Music_Player"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -27,6 +27,36 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/baseline_play_circle_24" />
+
+    <ImageButton
+        android:id="@+id/imageButton3"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="220dp"
+        android:layout_marginBottom="20dp"
+        app:srcCompat="@drawable/baseline_skip_next_24"
+        android:background="@drawable/baseline_skip_next_24"
+        tools:layout_editor_absoluteX="230dp"
+        tools:layout_editor_absoluteY="661dp"
+        tools:ignore="MissingConstraints"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:importantForAccessibility="no" />
+
+    <ImageButton
+        android:id="@+id/imageButton4"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="140dp"
+        android:layout_marginBottom="20dp"
+        android:importantForAccessibility="no"
+        android:background="@drawable/baseline_skip_previous_24"
+        app:srcCompat="@drawable/baseline_skip_previous_24"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="130dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:layout_editor_absoluteY="661dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
