--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,32 +17,19 @@
 
 
     <ImageButton
-        android:id="@+id/imageButton"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="180dp"
-        android:layout_marginBottom="20dp"
-        android:background="@drawable/baseline_play_circle_24"
-        android:text="Search"
-        android:importantForAccessibility="no"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/baseline_play_circle_24" />
-
-    <ImageButton
         android:id="@+id/imageButton3"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginStart="220dp"
         android:layout_marginBottom="20dp"
-        app:srcCompat="@drawable/baseline_skip_next_24"
         android:background="@drawable/baseline_skip_next_24"
-        tools:layout_editor_absoluteX="230dp"
-        tools:layout_editor_absoluteY="661dp"
-        tools:ignore="MissingConstraints"
-        app:layout_constraintStart_toStartOf="parent"
+        android:importantForAccessibility="no"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:importantForAccessibility="no" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/baseline_skip_next_24"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="230dp"
+        tools:layout_editor_absoluteY="661dp" />
 
     <ImageButton
         android:id="@+id/imageButton4"
@@ -50,13 +37,13 @@
         android:layout_height="50dp"
         android:layout_marginStart="140dp"
         android:layout_marginBottom="20dp"
-        android:importantForAccessibility="no"
         android:background="@drawable/baseline_skip_previous_24"
+        android:importantForAccessibility="no"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/baseline_skip_previous_24"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="130dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         tools:layout_editor_absoluteY="661dp" />
 
     <ImageButton
@@ -65,23 +52,39 @@
         android:layout_height="50dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="20dp"
-        app:srcCompat="@drawable/baseline_search_24"
+        android:importantForAccessibility="no"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="18dp"
+        app:srcCompat="@drawable/baseline_search_24"
+        tools:layout_editor_absoluteX="18dp" />
+
+    <ImageButton
+        android:id="@+id/imageButton8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:layout_marginEnd="10dp"
+        app:srcCompat="@drawable/baseline_playlist_add_24"
+        android:background="@drawable/baseline_playlist_add_24"
+        tools:layout_editor_absoluteX="342dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:layout_editor_absoluteY="654dp"
         android:importantForAccessibility="no" />
 
     <ImageButton
-        android:id="@+id/imageButton7"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginEnd="16dp"
+        android:id="@+id/imageButton9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
-        android:background="@drawable/baseline_playlist_add_24"
-        android:importantForAccessibility="no"
+        android:layout_marginEnd="180dp"
+        android:background="@drawable/play"
+        app:srcCompat="@drawable/play"
+        tools:layout_editor_absoluteX="178dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/baseline_playlist_add_24" />
+        tools:layout_editor_absoluteY="658dp"
+        android:importantForAccessibility="no" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
